# ut-cover-agent-tool

./: .gitignore  OPENCODE_UPGRADE.md  OPENCODE_ZIP_SETUP.md  README.md  REMOTE_WORKFLOW.md  UPGRADE.md  pyproject.toml
.opencode/agents/: ut-coverage-writer.md
examples/: .ut-cover.yaml
scripts/: package_zip.py  upgrade_from_zip.py
src/ut_cover_agent_tool/: __init__.py  cli.py  commands.py  config.py  config_writer.py  coverage.py  coverage_gate.py  errors.py  git_tools.py  presets.py  remote.py  reports.py  test_planning.py  upgrade.py
tests/: test_cli_flow.py  test_config.py  test_coverage.py  test_coverage_gate.py  test_git_tools.py  test_init_config.py  test_package_zip.py  test_remote.py  test_reports.py  test_test_planning.py  test_test_planning_cli.py  test_upgrade.py
